# translingua_iq

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  english_avm_short.txt  pyproject.toml  spanish_avm_short.txt
.streamlit/: config.toml
data/: english.txt  english_avm.txt  french.txt  spanish.txt  spanish_avm.txt
data/test_files/: es_translation.txt  fr_translation.txt  it_translation.txt  ja_translation.txt  pt_translation.txt  ru_translation.txt  zh_translation.txt
docs/: README.md
scripts/: generate_test_files.py  setup.py
tests/: test_multi_language.py  test_script.py
translingua_iq/src/: app.py
